# zldsp_fft_develop

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: accuracy.yml  accuracy_double.yml  accuracy_full.yml  accuracy_mid.yml  build.yml  stage_timing.yml  throughput.yml  throughput_double.yml  throughput_full.yml
benchmark/: accuracy.cpp  accuracy.py  accuracy_all.py  accuracy_cfft.cpp  accuracy_cfft.py  accuracy_mid.cpp  accuracy_mid.py  accuracy_mid_cfft.cpp  accuracy_mid_cfft.py  accuracy_mid_rfft.cpp  accuracy_mid_rfft.py  accuracy_rfft.cpp  accuracy_rfft.py  benchmark_include.hpp  build_config.py  build_test.cpp  profiler.py  profiler_main.cpp  stage_timing.cpp  stage_timing.py  stage_timing_all.py  throughput.cpp  throughput.py  throughput_all.py  throughput_all_cfft.py  throughput_cfft.py  throughput_rfft.cpp  throughput_rfft.py  throughput_rfft_all.py
fftw3_impl/: fftw3_impl.hpp
ipp_impl/: ipp_impl.hpp
kfr_impl/: kfr_impl.hpp
pffft_impl/: pffft_impl.hpp
vdsp_impl/: vdsp_impl.hpp
zlfft/: zldsp_fft_cfft.hpp  zldsp_fft_common.hpp  zldsp_fft_common_execute.hpp  zldsp_fft_common_init.hpp  zldsp_fft_common_math.hpp  zldsp_fft_common_radix.hpp  zldsp_fft_common_structure.hpp  zldsp_fft_rfft.hpp
zlfft/common/: zldsp_fft_common_execute.hpp  zldsp_fft_common_init.hpp  zldsp_fft_common_kernel.hpp  zldsp_fft_common_math.hpp  zldsp_fft_common_radix.hpp  zldsp_fft_common_structure.hpp  zldsp_fft_common_system.hpp
zlfft_impl/: hybrid_aosoa1.hpp  hybrid_aosoa2.hpp  hybrid_aosoa3.hpp  hybrid_aosoa4.hpp  simd_high_order_aosoa.hpp  simd_high_order_aosoa1.hpp  simd_high_order_aosoa2.hpp  simd_low_order_aosoa1.hpp  simd_low_order_aosoa2.hpp  simd_low_order_aosoa3.hpp  simd_low_order_aosoa4.hpp  simd_low_order_aosoa5.hpp  simd_low_order_aosoa6.hpp  simd_low_order_aosoa7.hpp  simd_low_order_aosoa8.hpp  simd_low_order_aosoa9.hpp  zlfft_common.hpp  zlfft_common_aosoa.hpp  zlfft_common_aosoa_hybrid.hpp  zlfft_common_aosoa_shuffle.hpp  zlfft_common_high_order.hpp  zlfft_common_math.hpp
